# rsomics-fastq-filter

./: Cargo.toml  README.md
benches/: bench.rs  fastq_filter.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs  golden.rs
tests/golden/: pe_filter.fastq.r1  pe_filter.fastq.r2  se_length.fastq  se_n_lower.fastq  se_quality.fastq
